--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API for a simple contact entry system",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage --verbose"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/JakRowan/contact-api/issues"
   },
-  "homepage": "https://github.com/JakRowan/contact-api#readme"
+  "homepage": "https://github.com/JakRowan/contact-api#readme",
+  "dependencies": {
+    "@babel/core": "^7.x.x",
+    "@babel/preset-env": "^7.x.x",
+    "babel-jest": "^24.x.x",
+    "eslint": "^6.x.x",
+    "eslint-config-airbnb-base": "^14.x.x",
+    "eslint-plugin-import": "^2.x.x",
+    "jest": "^24.x.x"
+  }
 }
