--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "API for a simple contact entry system",
   "main": "src/index.js",
   "scripts": {
+    "start": "node ./startServer.js",
     "test": "jest --coverage --verbose"
   },
   "repository": {
@@ -19,7 +20,12 @@
   "dependencies": {
     "@babel/core": "^7.x.x",
     "@babel/preset-env": "^7.x.x",
+    "@hapi/catbox-memory": "^4.1.0",
+    "@hapi/good": "^8.2.0",
+    "@hapi/good-console": "^8.1.0",
+    "@hapi/hapi": "^18.3.1",
     "babel-jest": "^24.x.x",
+    "dotenv": "^8.x.x",
     "eslint": "^6.x.x",
     "eslint-config-airbnb-base": "^14.x.x",
     "eslint-plugin-import": "^2.x.x",
